[gd_scene load_steps=34 format=3 uid="uid://d0r6ty67t1712"]

[ext_resource type="Texture2D" uid="uid://c26aoc2cfd6bu" path="res://assets/sprites/EndBoss/StoneGolem.png" id="1_3fpby"]
[ext_resource type="Script" path="res://scripts/stone_golem/stone_golem.gd" id="1_ttdvg"]
[ext_resource type="Texture2D" uid="uid://b454qnkwymv4q" path="res://assets/sprites/EndBoss/weaponPNG/Laser_sheet.png" id="2_itkcw"]
[ext_resource type="Script" path="res://scripts/stone_golem/states/idle_state.gd" id="3_n4k2m"]
[ext_resource type="Script" path="res://scripts/finite_state_machine.gd" id="3_ul75m"]
[ext_resource type="Script" path="res://scripts/stone_golem/states/follow.gd" id="4_m3k2n"]
[ext_resource type="Script" path="res://scripts/stone_golem/states/melee_attack.gd" id="7_a5glj"]
[ext_resource type="Script" path="res://scripts/stone_golem/states/laser_cast.gd" id="8_ce1ed"]
[ext_resource type="Script" path="res://scripts/stone_golem/states/ranged_attack.gd" id="9_6xg1w"]
[ext_resource type="Script" path="res://scripts/stone_golem/states/armor_buff.gd" id="9_bnapr"]
[ext_resource type="Script" path="res://scripts/stone_golem/states/death.gd" id="11_ov73e"]
[ext_resource type="Script" path="res://scripts/stone_golem/states/block.gd" id="13_vxdja"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_e7reu"]
properties/0/path = NodePath(".:sync_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:sync_direction")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:sync_target_player_id")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:sync_state")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:sync_animation")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:sync_pivot_rotation")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:sync_health")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath(".:sync_progress_bar_visible")
properties/7/spawn = true
properties/7/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvfnt"]
size = Vector2(256, 19)

[sub_resource type="Animation" id="Animation_g2w1n"]
resource_name = "Laser"
length = 1.87501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0049035, 0.129903, 0.254903, 0.378678, 0.503678, 0.628678, 0.753678, 0.878678, 1.00368, 1.12745, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 14, 0]
}

[sub_resource type="Animation" id="Animation_2sim4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/Label:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7axin"]
resource_name = "armor buff"
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cv4h2"]
resource_name = "block"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_e7x4f"]
resource_name = "boss_slained"
length = 4.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5wx3a"]
resource_name = "death"
length = 1.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4226u"]
resource_name = "glowing"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pcvu8"]
resource_name = "idle"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x5erg"]
resource_name = "laser_cast"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_de2v0"]
resource_name = "melee_attack"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3psc8"]
resource_name = "ranged_attack"
length = 1.12501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_owyq3"]
_data = {
"Laser": SubResource("Animation_g2w1n"),
"RESET": SubResource("Animation_2sim4"),
"armor buff": SubResource("Animation_7axin"),
"block": SubResource("Animation_cv4h2"),
"boss_slained": SubResource("Animation_e7x4f"),
"death": SubResource("Animation_5wx3a"),
"glowing": SubResource("Animation_4226u"),
"idle": SubResource("Animation_pcvu8"),
"laser_cast": SubResource("Animation_x5erg"),
"melee_attack": SubResource("Animation_de2v0"),
"ranged_attack": SubResource("Animation_3psc8")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8wbmo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x4yan"]
radius = 15.0
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f2s5a"]
size = Vector2(2602, 1789)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1f8dc"]
radius = 23.0
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhiat"]
size = Vector2(2604, 1805)

[sub_resource type="GDScript" id="GDScript_grbpy"]
script/source = "extends Area2D

const MELEE_DAMAGE = 10

func _ready():
	monitoring = false
	monitorable = false

func _on_body_entered(body):
	if not owner.is_multiplayer_authority():
		return
		
	if body.has_method(\"take_damage\"):
		body.take_damage(MELEE_DAMAGE)
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m0oxi"]
radius = 15.9903
height = 49.6183

[node name="StoneGolem" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ttdvg")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." groups=["enemies"]]
replication_config = SubResource("SceneReplicationConfig_e7reu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -19)
texture = ExtResource("1_3fpby")
hframes = 10
vframes = 10

[node name="Pivot" type="Node2D" parent="."]
position = Vector2(3, -36)

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
position = Vector2(98, 17)
texture = ExtResource("2_itkcw")
vframes = 15
frame = 1

[node name="LaserArea2D" type="Area2D" parent="Pivot"]
visible = false

[node name="LaserCollision2D" type="CollisionShape2D" parent="Pivot/LaserArea2D"]
position = Vector2(120, 0.5)
shape = SubResource("RectangleShape2D_jvfnt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_owyq3")
}
autoplay = "idle"

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
modulate = Color(0.666667, 0, 0, 1)
custom_minimum_size = Vector2(200, 0)
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.873667
anchor_right = 0.625
anchor_bottom = 0.908951
offset_left = 0.151978
offset_top = -0.135986
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_8wbmo")
max_value = 1000.0
value = 1000.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI/ProgressBar"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 1.0
offset_top = -18.0
offset_right = 69.0
offset_bottom = 5.0
theme_override_font_sizes/font_size = 12
text = "Stone Golem"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -116.0
offset_right = 132.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Boss has been Slained
"
metadata/_edit_use_anchors_ = true

[node name="debug" type="Label" parent="."]
visible = false
offset_left = -25.0
offset_top = -44.0
offset_right = 24.0
offset_bottom = -21.0
theme_override_font_sizes/font_size = 8
text = "debug"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -23)
shape = SubResource("CapsuleShape2D_x4yan")

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_f2s5a")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("3_ul75m")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("3_n4k2m")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_m3k2n")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_a5glj")

[node name="LaserBeam" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_ce1ed")

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_bnapr")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_ov73e")

[node name="RangedAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_6xg1w")

[node name="Block" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("13_vxdja")

[node name="HitBox2D" type="Area2D" parent="." groups=["enemies"]]
visible = false

[node name="HitBoxCollision2D" type="CollisionShape2D" parent="HitBox2D"]
position = Vector2(1, -22)
shape = SubResource("CapsuleShape2D_1f8dc")

[node name="CaveArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CaveArea"]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_mhiat")

[node name="AttackArea2D" type="Area2D" parent="."]
visible = false
script = SubResource("GDScript_grbpy")

[node name="CollisionShape2D Melee" type="CollisionShape2D" parent="AttackArea2D"]
position = Vector2(22, -15)
rotation = -0.0349066
shape = SubResource("CapsuleShape2D_m0oxi")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="area_entered" from="HitBox2D" to="." method="_on_hitbox_2d_area_entered"]
